app/assets/stylesheets/application/screen.scss
@import 'bootstrap';

body {
	background-color: #95A5A6;
}
.up {
	font-size: 5em;
	padding-top: 0px;
	color: #34495E;
}

.cetera {
	position: relative;
	font-size: 2em;
	margin-top: -65px;
	margin-bottom: 30px;
	margin-right: 35px;
}

.points {
	font-size: 14em;
	margin-top: -80px;
	margin-right: 0px;
	color: #34495E;
}

.scope {
	font-size: 2.1em;
	margin-top: -6px;
}

.hero-unit {
	padding: 0px 10px 10px 10px;
}

.light {
	color: #7F8C8D;
}

